--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@remixicon/react": "^4.6.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
