--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -13,6 +13,7 @@
     "@remixicon/react": "^4.6.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
